# pytest-examples

./: README.md
pytest_hooks_test_results/: Makefile  README.md  pyproject.toml
pytest_hooks_test_results/tests/: conftest.py  test_a.py
pytest_register_teardown/: .python-version  Makefile  pyproject.toml  pytest.ini
pytest_register_teardown/tests/: conftest.py  test_a.py
pytest_rerun_teardowns/: Makefile  pyproject.toml
pytest_rerun_teardowns/tests/: test_a.py
pytest_setup_failure/: Makefile  README.md  pyproject.toml
pytest_setup_failure/tests/: test_a.py
