[tool.poetry]
name = "pytest-register-teardown"
version = "0.1.0"
description = ""
authors = ["dskard"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pdbpp = "^0.10.3"
python-semantic-release = "^8.1.1"
pre-commit = "^3.4.0"
urllib3 = "<=2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/pytest_register_teardown/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.black]
line-length = 88
target-versions = ["py39"]
include = '\.pyi?$'
