[tool.poetry]
name = "pytest-rerun-teardowns"
version = "0.1.0"
description = ""
authors = ["dskard"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_rerun_teardowns", from = "src"},]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pdbpp = "^0.10.3"
python-semantic-release = "^7.32.0"
pytest-rerunfailures = "^10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/pytest_rerun_teardowns/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
